--- a/jea-home.html
+++ b/jea-home.html
@@ -14,9 +14,9 @@
     
     <!-- M365 G5 Migration Section -->
     <div class="dashboard-section m365-section">
-      <h2>M365 G5 Migration</h2>
-      <p>This section contains information about the M365 G5 migration process.</p>
-     <a href="jea-m365.html"><button class="dashboard-button">Learn More</button></a>
+      <h2>Roadmap</h2>
+      <p>Discover the exciting roadmap ahead for your organization.</p>
+     <a href="jea-m365.html"><button class="dashboard-button">Explore Roadmap</button></a>
     </div>
 
     <!-- Unified Progress Section -->
