--- a/jea-unified.html
+++ b/jea-unified.html
@@ -13,7 +13,7 @@
       <h1>Jacksonville Electric Authority (JEA) Unified Monthly Dashboard</h1>
     </div>
         <div class="progress-content">
-    <iframe title="Report Section" width="95%" height="1000" src="https://app.powerbigov.us/view?r=eyJrIjoiMWFhMGZmOWMtMDAxNi00YzljLWE5YWEtYzJmZjEzNGQwMWEyIiwidCI6Ijk2NzUxYzlkLWRiNzgtNDdmMi1hZGZmLWQ1ODc2Zjg3ODgzOSJ9" frameborder="0" allowFullScreen="true"></iframe>
+          <iframe title="UnifiedExecutiveReport-Feb2024" width="95%" height="1000" src="https://msit.powerbi.com/reportEmbed?reportId=96ec2c80-bba5-4ef7-9403-1f24e0a72ad0&autoAuth=true&ctid=72f988bf-86f1-41af-91ab-2d7cd011db47" frameborder="0" allowFullScreen="true"></iframe>
         </div>
   </div>
         <!-- Home Button -->
